fixed overflow on profile page. deleted blog page. fixed up subscibre page. still needs some work though.

--- a/project_dir/src/components/navigation/sidebar.scss
+++ b/project_dir/src/components/navigation/sidebar.scss
@@ -10,6 +10,9 @@
 .mainMainWrapper{
     z-index: 20;
     max-height: 100vh;
+    height: 100vh;
+    overflow-y: hidden;
+    overflow-x: hidden;
 
 }
 .name{
@@ -31,6 +34,7 @@
     padding: 0.5rem;
     width: fit-content;
     z-index: 25;
+    height: 100vmax;
     box-shadow: 0rem 0.5rem 2rem 0rem $darkestblack;
     
 }
