--- a/project_dir/src/components/profile/profile-layout.scss
+++ b/project_dir/src/components/profile/profile-layout.scss
@@ -3,7 +3,8 @@
 .profileLayoutWrapperWrapper{
     display: flex;
     flex-flow: row nowrap;
- 
+    overflow-x:hidden;
+    width: 100vh;
     
 
 }
