--- a/project_dir/src/components/profile/profile-tech-container.scss
+++ b/project_dir/src/components/profile/profile-tech-container.scss
@@ -4,8 +4,7 @@
     
     display: grid;
     grid-template-columns: repeat(auto-fill, 10rem);
-    box-shadow: 0.5rem 0.5rem 1rem 0rem rgb(20,20,20), inset 0.5rem 0.5rem 1rem 0rem rgb(0,0,0);
-    background-color: $darkerblack;
+    
     
     grid-gap: 1rem;
  
