--- a/project_dir/src/components/profile/profile-traits-container.scss
+++ b/project_dir/src/components/profile/profile-traits-container.scss
@@ -4,9 +4,8 @@
     display: flex;
     flex-flow: row nowrap;
     padding: 0.5rem;
-   
     background-color: $darkestblack;
-    grid-gap: 1rem;
+    grid-gap: 2rem;
     height:auto;
     
     width: 100%;
@@ -22,7 +21,7 @@
 }
 .traitTitle{
     align-items: center;
-    font-size: 1.25rem;
+    font-size: 1rem;
     
 }
 .traitIconDiv{
@@ -63,12 +62,12 @@
     0%{
         transform: scale(120%);
         border: 0.1rem solid rgba(0, 0, 0, 0);    
-     
+        z-index: 5;
         background-color: $darkerblack;
     }
     100%{
         transform: scale(100%);
-        
+        z-index: 25;
         background-color: $darkblack;
     }
 }
@@ -90,24 +89,28 @@
     background-color: $darkerblack;
     padding: 0.5rem 1.5rem;
     box-shadow: 0.5rem 0.5rem 1rem 0rem rgb(0,0,0), -0.5rem -0.5rem 1rem 0rem $darkerblack;
-    width: 100%;
+    width: 21vh;
+    height: 80%;
     animation: traitContainerHoverRev 0.3s;
-    height: auto;
+    
     display: flex;
     flex-flow: column nowrap;
+    align-items: stretch;
     justify-content:flex-start;
     text-align: center;
+    z-index: 5;
     transition: all 0.3s ease-in;
     border: 0.1rem solid rgba(0, 0, 0, 0);    
-        
     
 }
 .traitContainer:hover{
     background-color: $darkblack;
     color: $darkestblack;
+    z-index: 25;
     transition: all 0.3s ease-in;
     border: 0.1rem solid $normalprimary;    
     animation: traitContainerHover 0.5s;
+ 
     .traitDescription{
      
         animation: traitContainerTraitDescriptionHover 0.4s;
@@ -159,7 +162,6 @@
         display: flex;
         flex-flow: row nowrap;
         justify-content: center;
-        max-width: 700px;
         width: 100%;
     
     }
