--- a/project_dir/src/pages/subscribe.scss
+++ b/project_dir/src/pages/subscribe.scss
@@ -1,16 +1,40 @@
 @import "../components/abstract/color";
 
+
 .SubscribePageWrapperWrapper{
     display: flex;
-    flex-flow: row nowrap;
-    justify-content: flex-start;
-    width: 100vh;
-    height: 100%;
+    flex-flow: column nowrap;
+    justify-content: center;
+    width: 100%;
+    height:100vh;
+    margin: 0rem;
+    overflow-y: hidden;
+    background-image: url("../images/dev-bg.jpg");
+    background-size: cover;
+}
+
+.SubscribeHeader{
+    text-align: center;
+    text-transform: uppercase;
+    font-size: 1.5rem;
 }
 .SubscribePageWrapper{
-    background-image: url("../images/subscribe-bg.jpg");
-    background-size: cover;
-
-    height: 100vh;
+    
+   
+    background-color: rgba(0, 0, 0, 0.712);
+    overflow-y: hidden;
+    margin: 0rem;
+    width: 100%;
+    height: 100%;
     background-color: rgba(0,0,0,0.5);
+    display: flex;
+    flex-flow: row nowrap;
+    justify-content: center;
+}
+.SubscribePageDiv{
+   
+    width: 40%;
+    height: 100%;
+    margin: 0rem;
+    overflow-y: hidden;
 }
